[gd_scene load_steps=15 format=3 uid="uid://d4beuuagle5ei"]

[ext_resource type="Script" path="res://scenes/Enemies/snow_man.gd" id="1_bs3mb"]
[ext_resource type="PackedScene" uid="uid://bgehfpwlaunvl" path="res://scenes/components/spawner_component.tscn" id="2_eh7bk"]
[ext_resource type="PackedScene" uid="uid://orqq154lnhqm" path="res://scenes/death_particles.tscn" id="3_p2jkp"]
[ext_resource type="PackedScene" uid="uid://c34cc3hoyt8sc" path="res://scenes/floating_text_3d.tscn" id="4_hcixu"]
[ext_resource type="PackedScene" uid="uid://d3recwm5ur062" path="res://scenes/components/health_component.tscn" id="4_ta14i"]
[ext_resource type="PackedScene" uid="uid://ccumghcbbaw4a" path="res://scenes/components/hit_box_component.tscn" id="6_6oybw"]
[ext_resource type="PackedScene" uid="uid://yyi4nmski8oe" path="res://scenes/blizzard.tscn" id="7_8lmh0"]
[ext_resource type="PackedScene" uid="uid://ckhyl87e8uuc6" path="res://ready/gift.tscn" id="8_t8n57"]
[ext_resource type="AudioStream" uid="uid://eccycxyng740" path="res://assets/sounds/+1.mp3" id="9_mvysl"]
[ext_resource type="AudioStream" uid="uid://cdrpl57m36un4" path="res://assets/sounds/+1 multiplier.mp3" id="10_nhih7"]

[sub_resource type="SphereMesh" id="SphereMesh_tcg48"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j8avl"]
albedo_color = Color(0.219608, 0.219608, 0.219608, 1)
emission_enabled = true
emission_energy_multiplier = 16.0
emission_operator = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uph77"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ym7gj"]
radius = 0.617416
height = 2.27718

[node name="SnowMan" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_bs3mb")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="Body"]
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="Middle" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.72423, 0)
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.21429, 0)
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="RightEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.209641, 1.32633, 0.0812237)
material_override = SubResource("StandardMaterial3D_j8avl")
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="LeftEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.209641, 1.32633, -0.120979)
material_override = SubResource("StandardMaterial3D_j8avl")
mesh = SubResource("SphereMesh_tcg48")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.471435, 0)
shape = SubResource("CapsuleShape3D_uph77")

[node name="DeathSpawnerComponent" parent="." instance=ExtResource("2_eh7bk")]
scene = ExtResource("3_p2jkp")

[node name="DamageLabelSpawnerComponent" parent="." instance=ExtResource("2_eh7bk")]
scene = ExtResource("4_hcixu")

[node name="HealthComponent" parent="." instance=ExtResource("4_ta14i")]
max_health = 10

[node name="OverHead" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69634, 0)

[node name="GiftPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.507198, -0.694776)

[node name="HitBoxComponent" parent="." instance=ExtResource("6_6oybw")]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.472336, 0)
shape = SubResource("CapsuleShape3D_ym7gj")

[node name="Blizzard" parent="." instance=ExtResource("7_8lmh0")]
emitting = false

[node name="GiftSpawnerComponent" parent="." instance=ExtResource("2_eh7bk")]
scene = ExtResource("8_t8n57")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1
avoidance_enabled = true
radius = 0.4

[node name="AudioGrabbed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mvysl")

[node name="AudioPut" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_nhih7")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="hit" from="HitBoxComponent" to="." method="_on_hit_box_component_hit"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
